# Bebop-Autonomous-Control

./: Consolidated Code.ipynb  Decision_Algo.ipynb  ImageToChip.m  InputVideoToHeatMapVideo.ipynb  README.md  Semantic_Segmentation.ipynb  Video Frame Extraction with Function Placeholders.ipynb  VideoToImages.m  Working CNN (Clean).ipynb  Working CNN Boi v2.ipynb  Working CNN Boi v2.py  Working CNN Boi.ipynb
my_drone/: CMakeLists.txt  package.xml
my_drone/launch/: initial.launch
my_drone/src/: Altitude.cpp  CamControl.cpp  Commands  Flattrim.cpp  Land.cpp  Position.cpp  Sequence  Takeoff.cpp
